SigmaCodebackup3rdSep/objects/Product_Price__c.object
<CustomObject>
    <fields>
        <fullName>Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airport</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Airport</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Prices</relationshipLabel>
        <relationshipName>Product_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPM_Euro__c</fullName>
        <label>CPM Euro</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <label>CPM</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charlie_Id__c</fullName>
        <label>Charlie Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Value__c</fullName>
        <formula>(Monthly_Impressions__c/1000)*CPM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select Credit or Cash Customer</errorMessage>
            <filterItems>
                <field>Account.Customer_Type__c</field>
                <operation>equals</operation>
                <value>Cash Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.Customer_Type__c</field>
                <operation>equals</operation>
                <value>Credit Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Prices (Account)</relationshipLabel>
        <relationshipName>Product_Prices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discout__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HiddenSelectedUnits__c</fullName>
        <label>HiddenSelectedUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Prices (Location)</relationshipLabel>
        <relationshipName>Product_Prices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Product Prices</relationshipLabel>
        <relationshipName>Product_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Cost_Euro__c</fullName>
        <label>Media Cost Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Media Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Impressions__c</fullName>
        <label>Monthly Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Traffic__c</fullName>
        <label>Daily Traffic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Digital_Media_Campaign_Account_Type__c</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Prices (Partner)</relationshipLabel>
        <relationshipName>Product_Prices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Prices</relationshipLabel>
        <relationshipName>Product_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Cost_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Production Cost Euro(Per Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Production Cost(Per Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Price</label>
    <nameField>
        <label>Product Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_date_greater_than_Start_date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;=  Start_Date__c</errorConditionFormula>
        <errorMessage>End date must be greater than Start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_End_Dtae</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( End_Date__c )</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Select End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_Product</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Product_Id__r.Name )</errorConditionFormula>
        <errorDisplayField>Product_Id__c</errorDisplayField>
        <errorMessage>Enter Product Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_cost</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
ISNULL( Cost__c  ), 
  Cost__c &lt;= 0 
)</errorConditionFormula>
        <errorDisplayField>Cost__c</errorDisplayField>
        <errorMessage>Enter Valid Cost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_location</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Location__r.Name)</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Select Location</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Start_Date__c )</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Select Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_status</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  Status__c ,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Select Status</errorMessage>
    </validationRules>
</CustomObject>